<resources>
    <string name="app_name">RUBurger</string>
    <string name="title_ru_burger">RU Burger</string>
    <string name="BurgerIcon">Burger</string>
    <string name="sandwichicon">Sandwich</string>
    <string name="SideIcon">Sides</string>
    <string name="drinksicon">Drinks</string>
    <string name="ViewOrderButton">View Order</string>
    <string name="AllOrdersButton">All Orders</string>
    <string name="beveragetitle">Beverages</string>
    <string name="select_flavor">Select Flavor</string>
    <string name="selected_beverage">Select Beverage</string>
    <string name="select_size">Select Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="price_placeholder">Price</string>
    <string name="add_to_order">Add To Order</string>
    <string name="main_menu">Main Menu</string>
    <string name="burger_category">Burger</string>
    <string name="burgers">Burgers</string>
    <string name="sandwich_category">Sandwich</string>
    <string name="sandwiches">Sandwich</string>
    <string name="burger_button">Burgers</string>
    <string name="sandwich_button">Sandwich</string>
    <string name="drinks_button">Drinks</string>
    <string name="sides_button">Sides</string>
    <string name="view_order_button">View Order</string>
    <string name="all_orders_button">All Orders</string>
    <string name="beverage_flavor_image">Beverage Flavor</string>
    <string name="current_order">Current Order</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="remove_item">Remove Item</string>
    <string name="place_order">Place Order</string>
    <string name="all_orders">All Orders</string>
    <string name="select_order">Select Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="burger_title">Burger</string>
    <string name="burger_image_description">Burger</string>
    <string name="patty_label">Patty</string>
    <string name="single_patty">Single Patty</string>
    <string name="double_patty">Double Patty</string>
    <string name="bread_label">Bread</string>
    <string name="brioche">Brioche</string>
    <string name="wheat_bread">Wheat</string>
    <string name="pretzel">Pretzel</string>
    <string name="add_ons_label">Add-Ons</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="onions">Onions</string>
    <string name="avocado">Avocado</string>
    <string name="cheese">Cheese</string>
    <string name="quantity_label">Quantity</string>
    <string name="price_label">Price</string>
    <string name="default_price">Default Price</string>
    <string name="make_combo">Make Combo</string>
    <string name="sandwich_title">Sandwich</string>
    <string name="sandwich_image_description">Sandwich</string>
    <string name="bagel">Bagel</string>
    <string name="sourdough">Sourdough</string>
    <string name="protein_label">Protein</string>
    <string name="roast_beef">Roast Beef</string>
    <string name="chicken">Chicken</string>
    <string name="salmon">Salmon</string>
    <string name="default_sandwich_price">Price</string>
    <string name="sides_title">Sides</string>
    <string name="sides_image_description">Sides</string>
    <string name="side_type_label">Side</string>
    <string name="size_label">Size</string>
    <string name="small_size">Small</string>
    <string name="medium_size">Medium</string>
    <string name="large_size">Large</string>
    <string name="default_side_price">Price</string>
    <string name="combo_title">Combo</string>
    <string name="sandwich_label">Sandwich</string>
    <string name="side_image_description">Side</string>
    <string name="drink_flavor_label">Drink Flavor</string>
    <string name="drink_image_description">Drink</string>
    <string name="default_combo_price">Price</string>
    <string name="orders_placed_title">Orders Placed</string>
    <string name="select_order_label">Select Order</string>
    <string name="total_label">Total:</string>
    <string name="default_price_zero">0</string>
</resources>