<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitleTextView">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="188dp"
            android:layout_height="171dp"
            android:contentDescription="@string/burger_button"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/burger" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="213dp"
            android:layout_height="164dp"
            android:contentDescription="@string/sandwich_button"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/sandwich" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="188dp"
            android:layout_height="170dp"
            android:contentDescription="@string/drinks_button"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@mipmap/drinksicon" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="206dp"
            android:layout_height="170dp"
            android:contentDescription="@string/sides_button"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@mipmap/sidesicon" />

        <Button
            android:id="@+id/button"
            android:layout_width="188dp"
            android:layout_height="62dp"
            android:text="@string/view_order_button"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:text="@string/all_orders_button"
            app:layout_column="1"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>